--- a/my-center.html
+++ b/my-center.html
@@ -27,14 +27,14 @@
             </a>
             </li>
             <li>
-                <a href="get-ball.html">
+                <a href="building.html">
                 <img src="images/my2.png" alt="">
                 <label>获取能量球</label>
                 <img src="images/left.png" alt="">
             </a>
             </li>
             <li>
-                <a href="apply-friends.html">
+                <a href="building.html">
                 <img src="images/my3.png" alt="">
                 <label>邀请好友</label>
                 <img src="images/left.png" alt="">
