--- a/apply-friends.html
+++ b/apply-friends.html
@@ -14,7 +14,7 @@
 
         <img src="images/friend1.jpg">
         <div>
-            <a href ="javascript:return false;"class="login-btn" id="back-to-top">邀请好友</a>
+            <!--<a href ="javascript:return false;"class="login-btn" id="back-to-top">邀请好友</a>-->
         </div>
     </aside>
     <script src="js/jquery-3.2.1.min.js"></script>
