--- a/my-center.html
+++ b/my-center.html
@@ -11,7 +11,8 @@
 <body class="bg-color-gr">
     <header class="order-bg h-10">
         <div>
-            <a href="my-msg.html"><img src="images/toux.png" alt=""></a>
+            <!--<a href="my-msg.html"><img src="images/toux.png" alt=""></a>-->
+			<img src="images/toux.png" alt="">
             <label id="tel">137****4578</label>
             <a href="javascript:;" class="register-btn">剩余能量球 <span id="restAmount">65</span>颗</a>
             <span>(1kw·h=1.3能量球)</span>
